<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.IntervalsExercise">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/intervals_titleLabel"
            android:textAllCaps="false"
            android:textSize="@dimen/menuTitleTextSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/intervals_description" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/intervals_targetLabel" />

        <TextView
            android:id="@+id/intervals_targetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="" />

        <Button
            android:id="@+id/intervals_startBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/startBtnLabel" />

        <Button
            android:id="@+id/intervals_stopBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stopBtnLabel"
            android:visibility="gone" />

        <Button
            android:id="@+id/intervals_playTargetBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intervals_playTargetIntervalBtnLabel" />

        <Button
            android:id="@+id/intervals_stopTargetBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intervals_stopTargetIntervalBtnLabel"
            android:visibility="gone" />
        <Button
            android:id="@+id/intervals_changeTargetRootBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intervals_changeTargetRootBtnLabel" />

        <Button
            android:id="@+id/intervals_changeTargetIntervalBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intervals_changeTargetIntervalBtnLabel" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
