<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PitchMatching">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pitchMatching_titleLabel"
            android:textAllCaps="false"
            android:textSize="@dimen/menuTitleTextSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="Try match your pitch with the target pitch!" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pitchMatching_targetPitchLabel" />

        <TextView
            android:id="@+id/pitchMatching_targetPitchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="-" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Your Current Pitch" />

        <TextView
            android:id="@+id/pitchMatching_userPitchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="-" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pitchMatching_pitchDifferenceLabel" />

        <TextView
            android:id="@+id/pitchMatching_pitchDifferenceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="-" />

        <Button
            android:id="@+id/pitchMatching_startBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pitchMatching_startBtnLabel" />

        <Button
            android:id="@+id/pitchMatching_stopBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pitchMatching_stopBtnLabel"
            android:visibility="gone" />

        <Button
            android:id="@+id/pitchMatching_playTargetPitchBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pitchMatching_playTargetPitchBtnLabel" />

        <Button
            android:id="@+id/pitchMatching_stopTargetPitchBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pitchMatching_stopTargetPitchBtnLabel"
            android:visibility="gone" />

        <Button
            android:id="@+id/pitchMatching_changeTargetPitchBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pitchMatching_changeTargetPitchBtnLabel" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
